--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@ $(function () {
 [![StyleCI](https://styleci.io/repos/{{{style}}}/shield?branch=master)](https://styleci.io/repos/{{{style}}})
 {{/style}}
 {{#github}}
-[![License](https://img.shields.io/github/license/{{{github}}}.svg?maxAge={{{maxAge}}})](https://github.com/{{{github}}})
+[![License](https://img.shields.io/packagist/l/{{{github}}}.svg?maxAge={{{maxAge}}})](https://github.com/{{{github}}})
 {{/github}}
 </script>
 </head>
