--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 {{#style}}
 [![StyleCI](https://styleci.io/repos/{{{style}}}/shield?branch=master)](https://styleci.io/repos/{{{style}}})
 {{/style}}
-{{#github}}
-[![License](https://img.shields.io/packagist/l/{{{github}}}.svg?maxAge={{{maxAge}}})](https://github.com/{{{github}}})
-{{/github}}
+{{#composer}}
+[![License](https://img.shields.io/packagist/l/{{{composer}}}.svg?maxAge={{{maxAge}}})](https://packagist.org/packages/{{{composer}}})
+{{/composer}}
 </script>
 </head>
 <body>
