--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <script src="/app.js"></script>
 <script type="text/template" id="template">{{#composer}}
 [![Latest Stable Version](https://img.shields.io/packagist/v/{{{composer}}}.svg?maxAge={{{maxAge}}}&label=stable)](https://packagist.org/packages/{{{composer}}})
-[![Total Downloads](https://img.shields.io/packagist/dt/{{{composer}}}.svg?maxAge={{{maxAge}}})](https://packagist.org/packages/{{{composer}}})
 {{/composer}}
+{{#github}}
+[![PHP from Travis config](https://img.shields.io/travis/php-v/{{{github}}}.svg?maxAge={{{maxAge}}})](https://packagist.org/packages/{{{composer}}})
+{{/github}}
 {{#github}}
 [![Build Status](https://img.shields.io/travis/{{{github}}}.svg?maxAge={{{maxAge}}})](https://travis-ci.org/{{{github}}})
 [![Coverage Status](https://img.shields.io/coveralls/{{{github}}}.svg?maxAge={{{maxAge}}})](https://coveralls.io/github/{{{github}}}?branch=master)
@@ -23,9 +25,9 @@
 {{#style}}
 [![StyleCI](https://styleci.io/repos/{{{style}}}/shield?branch=master)](https://styleci.io/repos/{{{style}}})
 {{/style}}
-{{#composer}}
-[![License](https://img.shields.io/packagist/l/{{{composer}}}.svg?maxAge={{{maxAge}}})](https://packagist.org/packages/{{{composer}}})
-{{/composer}}
+{{#github}}
+[![License](https://img.shields.io/packagist/l/{{{github}}}.svg?maxAge={{{maxAge}}})](https://github.com/{{{github}}})
+{{/github}}
 </script>
 </head>
 <body>
