change path to js.cookie.js and app.js

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <script src="//ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/mustache.js/2.2.1/mustache.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/markdown-it/8.0.0/markdown-it.min.js"></script>
-<script src="/js.cookie.js"></script>
-<script src="/app.js"></script>
+<script src="js.cookie.js"></script>
+<script src="app.js"></script>
 <script type="text/template" id="template">{{#composer}}
 [![Latest Stable Version](https://img.shields.io/packagist/v/{{{composer}}}.svg?maxAge={{{maxAge}}}&label=stable)](https://packagist.org/packages/{{{composer}}})
 {{/composer}}
