--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
 {{#github}}
 [![PHP Version Support](https://img.shields.io/travis/php-v/{{{github}}}.svg?maxAge={{{maxAge}}})](https://packagist.org/packages/{{{composer}}})
 {{/github}}
+{{#composer}}
+[![Total Downloads](https://img.shields.io/packagist/dt/{{{composer}}}.svg?maxAge=3600)](https://packagist.org/packages/{{{composer}}})
+{{/composer}}
 {{#github}}
 [![Build Status](https://img.shields.io/travis/{{{github}}}.svg?maxAge={{{maxAge}}})](https://travis-ci.org/{{{github}}})
 [![Coverage Status](https://img.shields.io/coveralls/{{{github}}}.svg?maxAge={{{maxAge}}})](https://coveralls.io/github/{{{github}}}?branch=master)
