--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 [![Total Downloads](https://img.shields.io/packagist/dt/{{{composer}}}.svg?maxAge=3600)](https://packagist.org/packages/{{{composer}}})
 {{/composer}}
 {{#github}}
-[![Build Status](https://img.shields.io/travis/{{{github}}}.svg?maxAge={{{maxAge}}})](https://travis-ci.org/{{{github}}})
+[![Build Status](https://img.shields.io/github/checks-status/{{{github}}}/master.svg?maxAge={{{maxAge}}})](https://travis-ci.org/{{{github}}})
 [![Coverage Status](https://img.shields.io/coveralls/{{{github}}}.svg?maxAge={{{maxAge}}})](https://coveralls.io/github/{{{github}}}?branch=master)
 [![Scrutinizer Code Quality](https://img.shields.io/scrutinizer/g/{{{github}}}.svg?maxAge={{{maxAge}}})](https://scrutinizer-ci.com/g/{{{github}}}/?branch=master)
 {{/github}}
